Adição de bibliografia.

--- a/Flex/Flex/relatorio.tex
+++ b/Flex/Flex/relatorio.tex
@@ -60,7 +60,7 @@ Após análise da estrutura dos dois casos de estudo fornecidos e também da estrut
 \item skos:altLabel - contém designações alternativas para o nodo.
 \item skos:narrower - contém um atributo que estabelece uma ligação hierárquica com um outro nodo mais restrito do que o nodo a ser especificado.
 \item skos:broader - inverso do skos:narrower. Contém um atributo que estabelece uma ligação hierárquica com um nodo mais abrangente do que o nodo a ser especificado.
-\item skos:related - define uma ligação associativa entre dois nodos. 
+\item skos:related - define uma ligação associativa entre dois nodos. \cite{skosrel}
 \end{itemize}
 \end{itemize}
 
@@ -317,4 +317,8 @@ A realização deste trabalho permitiu também concluir que a estrutura xml inerent
 \item Neste momento é necessário que exista uma pasta chamada concepts na mesma pasta do programa para que este funcione. Esta pasta deverá ser automaticamente criada pelo programa caso não exista.
 \item A página final neste momento contém uma formatação mínima, apenas uns headers e umas marcas. Seria interessante formatar a página resultante com bootstrap e CSS criando até menus para uma maior comodidade de navegação.
 \end{itemize}
+\begin{thebibliography}{100} 
+\bibitem{skosrel} http://www.w3.org/TR/skos-reference/\#semantic-relations
+\end{thebibliography} 
+
 \end{document}
